--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "axios": "^1.5.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-floating-whatsapp": "^5.0.8",
+    "react-hook-form": "^7.46.1",
     "react-iframe": "^1.8.5",
     "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.27",
     "validator": "^13.11.0"
   },
   "devDependencies": {
