--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "lucide-react": "^0.539.0",
     "luxon": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,12 +26,10 @@
     "react-hook-form": "^7.46.1",
     "react-iframe": "^1.8.5",
     "react-router-dom": "^6.15.0",
-    "sweetalert2": "^11.7.27",
-    "validator": "^13.11.0"
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
